@@ -52,6 +52,11 @@ public class CloudMLTQParser extends QParser {
     String id = localParams.get(QueryParsing.V);
     // Do a Real Time Get for the document
     SolrDocument doc = getDocument(id);
+    if(doc == null) {
+      new SolrException(
+          SolrException.ErrorCode.BAD_REQUEST, "Error completing MLT request. Could not fetch " +
+          "document with id [" + id + "]");
+    }
     
     MoreLikeThis mlt = new MoreLikeThis(req.getSearcher().getIndexReader());
     // TODO: Are the mintf and mindf defaults ok at 1/0 ?
